# ProofCheck

./: .dockerignore  .gitattributes  .gitignore  DEPLOYMENT.md  Dockerfile  LICENSE.md  README.md  TASKS.md  docker-compose.yml  pyproject.toml
deploy/: fly.toml  heroku.yml  netlify.toml  render.yaml  vercel.json
proofcheck/: __init__.py  cli.py  concurrency.py  document.py  excel.py  humanize.py  images.py  matcher.py  models.py  normalize.py  ocr.py  ocr_cache.py  pdf.py  pipeline.py  report_html.py  report_xlsx.py
proofcheck.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
proofcheck/web/: __init__.py  app.py  auth.py  schemas.py  store.py
proofcheck/web/static/: app.css  app.js  index.html
proofcheckdocumentation/: claude.md  dependency-graph.html
proofcheckdocumentation/docs/: cli_EXPLAINED.md  document_EXPLAINED.md  excel_EXPLAINED.md  humanize_EXPLAINED.md  images_EXPLAINED.md  matcher_EXPLAINED.md  models_EXPLAINED.md  normalize_EXPLAINED.md  ocr_EXPLAINED.md  ocr_cache_EXPLAINED.md  pdf_EXPLAINED.md  pipeline_EXPLAINED.md  proofcheck_init_EXPLAINED.md  pyproject_EXPLAINED.md  report_html_EXPLAINED.md  report_xlsx_EXPLAINED.md  tests_conftest_EXPLAINED.md  tests_test_api_EXPLAINED.md  tests_test_matcher_EXPLAINED.md  tests_test_normalize_EXPLAINED.md  tests_test_pipeline_EXPLAINED.md  web_app_EXPLAINED.md  web_auth_EXPLAINED.md  web_index_html_EXPLAINED.md  web_init_EXPLAINED.md  web_schemas_EXPLAINED.md  web_store_EXPLAINED.md
scripts/: README.md  setup.ps1  setup.sh
tests/: conftest.py  test_api.py  test_auth.py  test_concurrency.py  test_matcher.py  test_normalize.py  test_ocr.py  test_pdf.py  test_pipeline.py  test_report_xlsx.py
