[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proofcheck"
version = "0.1.0"
description = "Deterministic Excel-vs-PDF proof-reading (no AI/LLM/ML, offline)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

# Pinned for reproducibility. The core (matching/normalization) is deterministic;
# the web extras expose the same pipeline over a stable JSON contract.
dependencies = [
    "click==8.4.1",
    "openpyxl==3.1.5",
    "pdfplumber==0.11.10",
    "rapidfuzz==3.14.5",
    "fastapi==0.138.0",
    "uvicorn[standard]==0.49.0",
    "python-multipart==0.0.32",
    "pydantic==2.13.4",
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
    "httpx==0.28.1",
    "reportlab==5.0.0",
]

[project.scripts]
proofcheck = "proofcheck.cli:main"

[tool.setuptools.packages.find]
include = ["proofcheck*"]

[tool.setuptools.package-data]
"proofcheck.web" = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
